// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "borderWidth": 0,
      "elevation": 3,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <Component
    style={
      Object {
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 108,
        "overflow": "hidden",
      }
    }
  >
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      delayPressIn={50}
      onPress={[Function]}
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <Connect(ImageBackground)
        reference={
          Object {
            "sys": Object {
              "id": "n2IQ6opic1Pj8",
            },
          }
        }
        resizeMode="cover"
        style={
          Object {
            "width": 114,
          }
        }
      >
        <Component
          style={
            Object {
              "backgroundColor": "#2d2f7f",
              "justifyContent": "center",
              "minHeight": 23,
              "paddingHorizontal": 5,
              "position": "absolute",
            }
          }
        >
          <Text
            color="whiteColor"
            markdown={false}
            markdownStyle={Object {}}
            type="price"
          >
            Free
          </Text>
        </Component>
      </Connect(ImageBackground)>
      <Component
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
            "paddingTop": 12,
          }
        }
      >
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          type="small"
        >
          12:12 – 13:12
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={2}
          style={
            Object {
              "paddingTop": 4,
            }
          }
          type="h3"
        >
          name
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={1}
          type="small"
        >
          location
        </Text>
      </Component>
    </Touchable>
    <SaveEventButton
      active={false}
      onDark={false}
      onPress={[Function]}
    />
  </Component>
</Component>
`;

exports[`renders correctly when the event is free 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "borderWidth": 0,
      "elevation": 3,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <Component
    style={
      Object {
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 108,
        "overflow": "hidden",
      }
    }
  >
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      delayPressIn={50}
      onPress={[Function]}
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <Connect(ImageBackground)
        reference={
          Object {
            "sys": Object {
              "id": "n2IQ6opic1Pj8",
            },
          }
        }
        resizeMode="cover"
        style={
          Object {
            "width": 114,
          }
        }
      >
        <Component
          style={
            Object {
              "backgroundColor": "#2d2f7f",
              "justifyContent": "center",
              "minHeight": 23,
              "paddingHorizontal": 5,
              "position": "absolute",
            }
          }
        >
          <Text
            color="whiteColor"
            markdown={false}
            markdownStyle={Object {}}
            type="price"
          >
            Free
          </Text>
        </Component>
      </Connect(ImageBackground)>
      <Component
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
            "paddingTop": 12,
          }
        }
      >
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          type="small"
        >
          12:12 – 13:12
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={2}
          style={
            Object {
              "paddingTop": 4,
            }
          }
          type="h3"
        >
          name
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={1}
          type="small"
        >
          location
        </Text>
      </Component>
    </Touchable>
    <SaveEventButton
      active={false}
      onDark={false}
      onPress={[Function]}
    />
  </Component>
</Component>
`;

exports[`renders correctly when there is a price range 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "borderWidth": 0,
      "elevation": 3,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <Component
    style={
      Object {
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 108,
        "overflow": "hidden",
      }
    }
  >
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      delayPressIn={50}
      onPress={[Function]}
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <Connect(ImageBackground)
        reference={
          Object {
            "sys": Object {
              "id": "n2IQ6opic1Pj8",
            },
          }
        }
        resizeMode="cover"
        style={
          Object {
            "width": 114,
          }
        }
      >
        <Component
          style={
            Object {
              "backgroundColor": "#2d2f7f",
              "justifyContent": "center",
              "minHeight": 23,
              "paddingHorizontal": 5,
              "position": "absolute",
            }
          }
        >
          <Text
            color="whiteColor"
            markdown={false}
            markdownStyle={Object {}}
            type="price"
          >
            From £12
          </Text>
        </Component>
      </Connect(ImageBackground)>
      <Component
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
            "paddingTop": 12,
          }
        }
      >
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          type="small"
        >
          12:12 – 13:12
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={2}
          style={
            Object {
              "paddingTop": 4,
            }
          }
          type="h3"
        >
          name
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={1}
          type="small"
        >
          location
        </Text>
      </Component>
    </Touchable>
    <SaveEventButton
      active={false}
      onDark={false}
      onPress={[Function]}
    />
  </Component>
</Component>
`;

exports[`renders correctly when there is only one price 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 5,
      "borderWidth": 0,
      "elevation": 3,
      "shadowColor": "rgba(0, 0, 0, 0.2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <Component
    style={
      Object {
        "borderRadius": 5,
        "flexDirection": "row",
        "height": 108,
        "overflow": "hidden",
      }
    }
  >
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      delayPressIn={50}
      onPress={[Function]}
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "flexGrow": 1,
        }
      }
    >
      <Connect(ImageBackground)
        reference={
          Object {
            "sys": Object {
              "id": "n2IQ6opic1Pj8",
            },
          }
        }
        resizeMode="cover"
        style={
          Object {
            "width": 114,
          }
        }
      >
        <Component
          style={
            Object {
              "backgroundColor": "#2d2f7f",
              "justifyContent": "center",
              "minHeight": 23,
              "paddingHorizontal": 5,
              "position": "absolute",
            }
          }
        >
          <Text
            color="whiteColor"
            markdown={false}
            markdownStyle={Object {}}
            type="price"
          >
            £12
          </Text>
        </Component>
      </Connect(ImageBackground)>
      <Component
        style={
          Object {
            "flex": 1,
            "paddingLeft": 8,
            "paddingTop": 12,
          }
        }
      >
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          type="small"
        >
          12:12 – 13:12
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={2}
          style={
            Object {
              "paddingTop": 4,
            }
          }
          type="h3"
        >
          name
        </Text>
        <Text
          color="lightNavyBlueColor"
          markdown={false}
          markdownStyle={Object {}}
          numberOfLines={1}
          type="small"
        >
          location
        </Text>
      </Component>
    </Touchable>
    <SaveEventButton
      active={false}
      onDark={false}
      onPress={[Function]}
    />
  </Component>
</Component>
`;
